tests/fw_rules_tests/policies/expected_output/semantic_diff_old1_new1a_txt_no_fw_rules_query_output.txt
Added connections between persistent peers (based on topology from config: old1) :
demo/account-query[DaemonSet] => demo/bank-ui[DaemonSet] : TCP 8080
demo/bank-ui[DaemonSet] => demo/account-command[DaemonSet] : All Connections
Removed connections between persistent peers (based on topology from config: new1a) :
demo/account-query[DaemonSet] => demo/bank-ui[DaemonSet] : UDP 8080
